// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQLLiveData Integration publishes patches on 'update' 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/numberOfCats",
        "value": 200,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' 2`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/0/address",
        "value": "123 real st apt. 1",
      },
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/1/address",
        "value": "200 legit rd apt. 2",
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with new list entries 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "replace",
        "path": "/houses/2",
        "value": Object {
          "address": "somwhere",
          "id": "add_that_id",
          "numberOfCats": 10,
        },
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes patches on 'update' with removed list entries 1`] = `
Object {
  "live": Object {
    "patch": Array [
      Object {
        "from": null,
        "op": "remove",
        "path": "/jedis/2",
        "value": null,
      },
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": Object {
      "houses": Array [
        Object {
          "address": "123 real st",
          "id": "real_street",
          "numberOfCats": 5,
        },
        Object {
          "address": "200 legit rd",
          "id": "legit_road",
          "numberOfCats": 0,
        },
      ],
      "jedis": Array [
        Object {
          "houses": Array [
            Object {
              "address": "200 legit rd 90211",
            },
          ],
          "id": "jedi_1",
          "name": "Luke Skywalker",
        },
        Object {
          "houses": Array [],
          "id": "jedi_2",
          "name": "Yoda",
        },
        Object {
          "houses": Array [
            Object {
              "address": "200 legit rd 90211",
            },
            Object {
              "address": "123 real st 90210",
            },
          ],
          "id": "jedi_3",
          "name": "Mace Windu",
        },
      ],
    },
  },
}
`;

exports[`GraphQLLiveData Integration with an empty array publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": "TODO",
  },
}
`;

exports[`GraphQLLiveData Integration with an empty list publishes patches on 'update' 1`] = `
Object {
  "live": Object {
    "patch": Array [
      "TODO"
    ],
    "query": null,
  },
}
`;

exports[`GraphQLLiveData Integration with an empty list publishes the initialQuery immediately 1`] = `
Object {
  "live": Object {
    "patch": null,
    "query": "TODO",
  },
}
`;
